--- a/.github/workflows/daos.yml
+++ b/.github/workflows/daos.yml
@@ -16,5 +16,5 @@ jobs:
     - name: Run a multi-line script
       run: |
         . ./share/spack/setup-env.sh
-        spack install daos
+        spack install daos ^protobuf-c@1.4.1 ^protobuf@3.21.12
         
