--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -3,11 +3,11 @@ name: ci
 on:
   push:
     branches:
-      - develop
+      - develop-
       - releases/**
   pull_request:
     branches:
-      - develop
+      - develop-
       - releases/**
 
 concurrency:
