--- a/.github/workflows/spack.yml
+++ b/.github/workflows/spack.yml
@@ -2,9 +2,9 @@ name: spack ubuntu
 
 on:
   push:
-    branches: [ develop ]
+    branches: [ develop- ]
   pull_request:
-    branches: [ develop ]
+    branches: [ develop- ]
   workflow_dispatch:
 
 jobs:
