--- a/.github/workflows/daos.yml
+++ b/.github/workflows/daos.yml
@@ -11,6 +11,10 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
+    - name: Install dependencies
+      run: |
+        sudo apt-get update
+        sudo apt-get install -q -y ninja-build automake autoconf libtool libtool-bin mpich libmpich-dev dpdk libraft-dev libboost-dev libunwind-devel    
     - name: Checkout spack
       uses: actions/checkout@v3
     - name: Run a multi-line script
