ci: develop -> dev

--- a/.github/workflows/daos.yml
+++ b/.github/workflows/daos.yml
@@ -14,7 +14,7 @@ jobs:
     - name: Install dependencies
       run: |
         sudo apt-get update
-        sudo apt-get install -q -y ninja-build automake autoconf libtool libtool-bin mpich libmpich-dev dpdk libraft-dev libboost-dev libunwind-devel    
+        sudo apt-get install -q -y ninja-build automake autoconf libtool libtool-bin mpich libmpich-dev dpdk libraft-dev libboost-dev libunwind-dev
     - name: Checkout spack
       uses: actions/checkout@v3
     - name: Run a multi-line script
