--- a/.github/workflows/daos2.yml
+++ b/.github/workflows/daos2.yml
@@ -16,7 +16,7 @@ jobs:
     - name: Install dependencies
       run: |
         sudo apt-get update
-        sudo apt-get install -q -y ninja-build automake autoconf libtool libtool-bin mpich libmpich-dev dpdk libraft-dev libboost-dev libunwind-devel          
+        sudo apt-get install -q -y ninja-build automake autoconf libtool libtool-bin mpich libmpich-dev dpdk libraft-dev libboost-dev libunwind-dev
     - name: Run a multi-line script
       run: |
         . ./share/spack/setup-env.sh
