--- a/.github/workflows/daos3.yml
+++ b/.github/workflows/daos3.yml
@@ -19,8 +19,8 @@ jobs:
       uses: actions/checkout@v3
       with:
         repository: hyoklee/daos
-    - name: Install DAOS dependencies        
-        path: daos
+    - name: Install DAOS dependencies
+      run: |    
         cd daos
         sudo ./utils/scripts/install-ubuntu.sh
         sudo pip install -r requirements.txt
