--- a/.github/workflows/daos2.yml
+++ b/.github/workflows/daos2.yml
@@ -16,47 +16,8 @@ jobs:
     - name: Install dependencies
       run: |
         sudo apt-get update
-        sudo apt-get install -q -y \
-          build-essential \
-          clang \
-          clang-format \
-          cmake \
-          curl \
-          fuse3 \
-          git \
-          golang-go \
-          kmod \
-          libaio-dev \
-          libboost-dev \
-          libcmocka-dev \
-          libcunit1-dev \
-          libfuse3-dev \
-          libhwloc-dev \
-          libibverbs-dev \
-          libjson-c-dev \
-          liblz4-dev \
-          libnuma-dev \
-          libmd-dev \
-          libmpich-dev \
-          libprotobuf-c-dev \
-          librdmacm-dev \
-          libssl-dev \
-          libtool-bin \
-          libunwind-dev \
-          libyaml-dev \
-          locales \
-          maven \
-          mpich \
-          numactl \
-          openjdk-8-jdk \
-          patchelf \
-          pciutils \
-          pkg-config \
-          python3-dev \
-          python3-venv \
-          uuid-dev \
-          valgrind \
-          yasm
+        chmod u+x install-ubuntu.sh
+        sudo ./install-ubuntu.sh
     - name: Run a multi-line script
       run: |
         . ./share/spack/setup-env.sh
