ci: test hdf5-vol-daos

--- a/.github/workflows/test_vols.yml
+++ b/.github/workflows/test_vols.yml
@@ -2,9 +2,9 @@ name: test vols
 
 on:
   push:
-    branches: [ develop- ]
+    branches: [ develop ]
   pull_request:
-    branches: [ develop- ]
+    branches: [ develop ]
   workflow_dispatch:
 
 jobs:
