--- a/.github/workflows/daos3.yml
+++ b/.github/workflows/daos3.yml
@@ -31,6 +31,7 @@ jobs:
     - name: Run a multi-line script
       run: |
         . ./share/spack/setup-env.sh
-        spack spec daos ^protobuf-c@1.4.1 ^protobuf@3.21.12 ^python@3.10.6
-        spack install -v --show-log-on-error daos@master ^protobuf-c@1.4.1 ^protobuf@3.21.12 ^python@3.10.6
+        spack install -v --show-log-on-error spdk
+        # spack spec daos ^protobuf-c@1.4.1 ^protobuf@3.21.12 ^python@3.10.6 ^spdk@22.01.2
+        # spack install -v --show-log-on-error daos@master ^protobuf-c@1.4.1 ^protobuf@3.21.12 ^python@3.10.6 ^spdk@22.01.2
         
