--- a/.github/workflows/spdk.yml
+++ b/.github/workflows/spdk.yml
@@ -2,9 +2,9 @@ name: spdk~vhost+virtio
 
 on:
   push:
-    branches: [ develop ]
+    branches: [ develop- ]
   pull_request:
-    branches: [ develop ]
+    branches: [ develop- ]
   workflow_dispatch:
 
 jobs:
