--- a/.github/workflows/dpdk_m.yml
+++ b/.github/workflows/dpdk_m.yml
@@ -2,9 +2,9 @@ name: dpdk@main
 
 on:
   push:
-    branches: [ develop- ]
+    branches: [ develop ]
   pull_request:
-    branches: [ develop- ]
+    branches: [ develop ]
   workflow_dispatch:
 
 jobs:
@@ -14,7 +14,7 @@ jobs:
     - name: Install dependencies
       run: |
         sudo apt-get update
-        sudo apt-get install -q -y ninja-build automake autoconf libtool libtool-bin mpich libmpich-dev dpdk libraft-dev libboost-dev libunwind-dev
+        sudo apt-get install -q -y ninja-build automake autoconf libtool libtool-bin mpich libmpich-dev libboost-dev libunwind-dev
     - name: Checkout spack
       uses: actions/checkout@v3
     - name: Run a multi-line script
