ci: test dpdk@main

--- a/.github/workflows/daos.yml
+++ b/.github/workflows/daos.yml
@@ -2,9 +2,9 @@ name: daos
 
 on:
   push:
-    branches: [ develop- ]
+    branches: [ develop ]
   pull_request:
-    branches: [ develop- ]
+    branches: [ develop ]
   workflow_dispatch:
 
 jobs:
@@ -23,7 +23,7 @@ jobs:
     - name: Run a multi-line script
       run: |
         . ./share/spack/setup-env.sh
-        spack spec daos@master ^protobuf-c@1.4.1 ^protobuf@3.21.12 ^python@3.10.6
+        spack spec daos@master ^protobuf-c@1.4.1 ^protobuf@3.21.12 ^python@3.10.6 
         spack install -v --show-log-on-error daos@master \
-        ^protobuf-c@1.4.1 ^protobuf@3.21.12 ^python@3.10.6
+        ^protobuf-c@1.4.1 ^protobuf@3.21.12 ^python@3.10.6 ^dpdk@main
 
