--- a/.github/workflows/daos3.yml
+++ b/.github/workflows/daos3.yml
@@ -1,10 +1,10 @@
-name: daos3
+name: daos3 no build-deps
 
 on:
   push:
-    branches: [ develop- ]
+    branches: [ develop ]
   pull_request:
-    branches: [ develop- ]
+    branches: [ develop ]
   workflow_dispatch:
 
 jobs:
@@ -14,23 +14,53 @@ jobs:
     - name: Install dependencies
       run: |
         sudo apt-get update
-        sudo apt-get install -q -y ninja-build automake autoconf libtool libtool-bin mpich libmpich-dev dpdk libraft-dev libboost-dev libunwind-dev
-    - name: Checkout DAOS
-      uses: actions/checkout@v3
-      with:
-        repository: hyoklee/daos
-        path: daos
-    - name: Install DAOS dependencies
-      run: |    
-        cd daos
-        sudo ./utils/scripts/install-ubuntu.sh
-        sudo pip install -r requirements.txt
-        cd ..        
+        sudo apt-get install -q -y \
+        autoconf \
+        build-essential \
+        clang \
+        clang-format \
+        cmake \
+        curl \
+        fuse3 \
+        git \
+        golang-go \
+        kmod \
+        libaio-dev \
+        libboost-dev \
+        libcmocka-dev \
+        libcunit1-dev \
+        libfuse3-dev \
+        libhwloc-dev \
+        libibverbs-dev \
+        libjson-c-dev \
+        liblz4-dev \
+        libnuma-dev \
+        libmd-dev \
+        libmpich-dev \
+        libprotobuf-c-dev \
+        librdmacm-dev \
+        libssl-dev \
+        libtool-bin \
+        libunwind-dev \
+        libyaml-dev \
+        locales \
+        maven \
+        mpich \
+        numactl \
+        openjdk-8-jdk \
+        patchelf \
+        pciutils \
+        pkg-config \
+        python3-dev \
+        python3-venv \
+        uuid-dev \
+        valgrind \
+        yasm
     - name: Checkout spack
       uses: actions/checkout@v3
     - name: Run a multi-line script
       run: |
         . ./share/spack/setup-env.sh
-        spack spec daos ^protobuf-c@1.4.1 ^protobuf@3.21.12 ^python@3.10.6 ^spdk@22.01.2
-        spack install -v --show-log-on-error daos@master ^protobuf-c@1.4.1 ^protobuf@3.21.12 ^python@3.10.6 ^spdk@22.01.2
+        spack spec daos ^protobuf-c@1.4.1 ^protobuf@3.21.12 ^spdk@22.01.2
+        spack install -v --show-log-on-error daos ^protobuf-c@1.4.1 ^protobuf@3.21.12 ^spdk@22.01.2
         
