--- a/.github/workflows/daos3.yml
+++ b/.github/workflows/daos3.yml
@@ -63,6 +63,6 @@ jobs:
       run: |
         . ./share/spack/setup-env.sh
         spack spec daos \
-        ^go@1.19.5 ^protobuf-c@1.4.1 ^protobuf@3.21.12 ^spdk@23.01
+        ^dpdk@main ^go@1.19.5 ^protobuf-c@1.4.1 ^protobuf@3.21.12 ^spdk@23.01
         spack install -v --show-log-on-error daos \
-        ^go@1.19.5 ^protobuf-c@1.4.1 ^protobuf@3.21.12 ^spdk@23.01
+        ^dpdk@main ^go@1.19.5 ^protobuf-c@1.4.1 ^protobuf@3.21.12 ^spdk@23.01
