chore: fix formatting

--- a/.github/workflows/daos3.yml
+++ b/.github/workflows/daos3.yml
@@ -2,9 +2,9 @@ name: daos apt install deps
 
 on:
   push:
-    branches: [ develop ]
+    branches: [ develop- ]
   pull_request:
-    branches: [ develop ]
+    branches: [ develop- ]
   workflow_dispatch:
 
 jobs:
