--- a/.github/workflows/daos.yml
+++ b/.github/workflows/daos.yml
@@ -2,9 +2,9 @@ name: daos
 
 on:
   push:
-    branches: [ develop- ]
+    branches: [ develop ]
   pull_request:
-    branches: [ develop- ]
+    branches: [ develop ]
   workflow_dispatch:
 
 jobs:
@@ -25,5 +25,5 @@ jobs:
         . ./share/spack/setup-env.sh
         spack spec daos@master ^protobuf-c@1.4.1 ^protobuf@3.21.12 ^python@3.10.6 
         spack install -v --show-log-on-error daos@master \
-        ^protobuf-c@1.4.1 ^protobuf@3.21.12 ^python@3.10.6 ^dpdk@main
+        ^protobuf-c@1.4.1 ^protobuf@3.21.12 ^python@3.10.6
 
