--- a/.github/workflows/mac_hdf5.yml
+++ b/.github/workflows/mac_hdf5.yml
@@ -1,10 +1,10 @@
-name: mac hdf5@1.12.2+mpi+fortran
+name: mac hdf5@develop-1.15+mpi+fortran
 
 on:
   push:
-    branches: [ develop- ]
+    branches: [ develop ]
   pull_request:
-    branches: [ develop- ]
+    branches: [ develop ]
   workflow_dispatch:
     
 jobs:
@@ -16,6 +16,6 @@ jobs:
     - name: Run a multi-line script
       run: |
         . ./share/spack/setup-env.sh
-        spack spec hdf5@1.12.2+mpi+fortran
-        spack install -v hdf5@1.12.2+mpi+fortran
+        spack spec hdf5@develop-1.15+mpi+fortran
+        spack install -v hdf5@develop-1.15+mpi+fortran
       
