--- a/.github/workflows/jarvis.yml
+++ b/.github/workflows/jarvis.yml
@@ -2,9 +2,9 @@ name: py-jarvis-util
 
 on:
   push:
-    branches: [ develop ]
+    branches: [ develop- ]
   pull_request:
-    branches: [ develop ]
+    branches: [ develop- ]
   workflow_dispatch:
     
 jobs:
