--- a/.github/workflows/mac_hdf5.yml
+++ b/.github/workflows/mac_hdf5.yml
@@ -2,9 +2,9 @@ name: mac hdf5@develop-1.15+mpi+fortran
 
 on:
   push:
-    branches: [ develop ]
+    branches: [ develop- ]
   pull_request:
-    branches: [ develop ]
+    branches: [ develop- ]
   workflow_dispatch:
     
 jobs:
