--- a/.github/workflows/hdf5_mpi.yml
+++ b/.github/workflows/hdf5_mpi.yml
@@ -2,9 +2,9 @@ name: ubuntu hdf5 ^mpitrampoline
 
 on:
   push:
-    branches: [ develop ]
+    branches: [ develop- ]
   pull_request:
-    branches: [ develop ]
+    branches: [ develop- ]
   workflow_dispatch:
     
 jobs:
