--- a/.github/workflows/hdf5_u_dev.yml
+++ b/.github/workflows/hdf5_u_dev.yml
@@ -2,9 +2,9 @@ name: ubuntu hdf5@develop+mpi+fortran
 
 on:
   push:
-    branches: [ develop ]
+    branches: [ develop- ]
   pull_request:
-    branches: [ develop ]
+    branches: [ develop- ]
   workflow_dispatch:
     
 jobs:
